tests/rosetta/out/C/composite-numbers-k-with-no-single-digit-factors-whose-factors-are-all-substrings-of-k.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:18:20Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:18:20Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static int index_of_string(char *s, char *sub) {
  char *pos = strstr(s, sub);
  if (!pos)
    return -1;
  return pos - s;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static list_int slice_list_int(list_int v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_int r = list_int_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
list_int primeFactors(int n) {
  list_int factors = list_int_create(0);
  int x = n;
  while (x % 2 == 0) {
    int tmp1_data[1];
    list_int tmp1 = {1, tmp1_data};
    tmp1.data[0] = 2;
    list_int tmp2 = concat_list_int(factors, tmp1);
    factors = tmp2;
    x = (int)((((double)x) / ((double)2)));
  }
  int p = 3;
  while (p * p <= x) {
    while (x % p == 0) {
      int tmp3_data[1];
      list_int tmp3 = {1, tmp3_data};
      tmp3.data[0] = p;
      list_int tmp4 = concat_list_int(factors, tmp3);
      factors = tmp4;
      x = (int)((((double)x) / ((double)p)));
    }
    p = p + 2;
  }
  if (x > 1) {
    int tmp5_data[1];
    list_int tmp5 = {1, tmp5_data};
    tmp5.data[0] = x;
    list_int tmp6 = concat_list_int(factors, tmp5);
    factors = tmp6;
  }
  return factors;
}

char *commatize(int n) {
  char *tmp7 = _str(n);
  char *s = tmp7;
  char *out = "";
  int i = strlen(s) - 1;
  int c = 0;
  while (i >= 0) {
    out = slice_string(s, i, i + 1) + out;
    c = c + 1;
    if (c % 3 == 0 && i > 0) {
      char *tmp8 = concat_string(",", out);
      out = tmp8;
    }
    i = i - 1;
  }
  return out;
}

int indexOf(char *s, char *sub) {
  int i = 0;
  while (i + strlen(sub) <= strlen(s)) {
    if (slice_string(s, i, i + strlen(sub)) == sub) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

char *pad10(char *s) {
  char *str = s;
  while ((str.len < 10)) {
    char *tmp9 = concat_string(" ", str);
    str = tmp9;
  }
  return str;
}

char *trimRightStr(char *s) {
  int end = strlen(s);
  while (end > 0 && slice_string(s, end - 1, end) == " ") {
    end = end - 1;
  }
  return slice_string(s, 0, end);
}

int mochi_main() {
  list_int res = list_int_create(0);
  int count = 0;
  int k = 11 * 11;
  while ((count < 20)) {
    if (k % 3 == 0 || k % 5 == 0 || k % 7 == 0) {
      k = k + 2;
      continue;
    }
    list_int factors = primeFactors(k);
    if (factors.len > 1) {
      char *tmp10 = _str(k);
      char *s = tmp10;
      int includesAll = 1;
      int prev = (-1);
      for (int tmp11 = 0; tmp11 < factors.len; tmp11++) {
        int f = factors.data[tmp11];
        if (f == prev) {
          continue;
        }
        char *tmp12 = _str(f);
        char *fs = tmp12;
        if (index_of_string(s, fs) == ((-1))) {
          includesAll = 0;
          break;
        }
        prev = f;
      }
      if (includesAll) {
        res = 0;
        count = count + 1;
      }
    }
    k = k + 2;
  }
  char *line = "";
  list_int tmp13 = slice_list_int(res, 0, 10);
  for (int tmp14 = 0; tmp14 < tmp13.len; tmp14++) {
    char *e = tmp13.data[tmp14];
    line = line + pad10(commatize(e)) + " ";
  }
  printf("%s\n", trimRightStr(line));
  line = "";
  list_int tmp15 = slice_list_int(res, 10, 20);
  for (int tmp16 = 0; tmp16 < tmp15.len; tmp16++) {
    char *e = tmp15.data[tmp16];
    line = line + pad10(commatize(e)) + " ";
  }
  printf("%s\n", trimRightStr(line));
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
